# musicclubbot

./: .env.example  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: Cargo.toml  build.rs
api/proto/: auth.proto  concert.proto  music.proto  participation.proto  song.proto
api/src/: lib.rs
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/api/: auth.go  helpers.go  song.go
backend/internal/api/auth/: telegram_webapp_auth.go
backend/internal/api/song/: create.go  list.go  update.go
backend/internal/app/: app.go  logging.go
backend/internal/config/: config.go
backend/internal/helpers/: helpers.go  thumbnail.go
backend/proto/: auth.pb.go  auth_grpc.pb.go  event.pb.go  event_grpc.pb.go  permissions.pb.go  song.pb.go  song_grpc.pb.go  user.pb.go
bot/: .dockerignore  Dockerfile  README.md  main.py  models.py  pyproject.toml  requirements.txt
bot/handlers/: addsong.py  adminpanel.py  editrole.py  editsong.py  mainmenu.py  start.py
bot/locales/en/LC_MESSAGES/: bot.po
bot/locales/ru/LC_MESSAGES/: bot.po
bot/middlewares/: pm.py
bot/models/: song.py
bot/services/: invite_link.py  strings.py
bot/src/: db.py  main.py
bot/states/: addsong.py  editsong.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  buf.gen.yaml  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: App.tsx  AuthGate.tsx  ConcertsCard.tsx  EventList.tsx  JoinCard.tsx  Legend.tsx  LoginCard.tsx  MyParticipationsCard.tsx  SongList.tsx  SongModal.tsx  SongsCard.tsx  StatusPills.tsx  formatTimestamp.tsx  makeTimestamp.tsx  safeId.tsx  toDateInput.tsx
frontend/src/components/forms/: CreateEventForm.tsx  (+1 more)
frontend/src/grpc/: client.ts  hooks.ts  schema.ts
frontend/src/proto/: auth_pb.ts  song_pb.ts  user_pb.ts
frontend/src/services/: api.ts  config.ts
frontend/src/styles/: global.css
migrations/versions/: d19f157143d1_add_song_description.py
nginx/conf.d/: default.conf
postgres-init-scripts/: 02-initial.sql  03-add-song-thumbnail.sql
proto/: auth.proto  event.proto  permissions.proto  song.proto  user.proto
scripts/: run_backend.sh  run_bot.sh  run_frontend.sh
server/: Cargo.toml
server/src/: main.rs
server/src/grpc/: auth.rs  concert.rs  middleware.rs  mod.rs  participation.rs  song.rs
